--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;800;900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Tajawal:wght@400;500;700;800;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -19,6 +19,30 @@
 <body>
     <section id="header">
         <div class="container">
+            <div class="social-media">
+                <div class="row justify-content-between">
+                    <div class="col-lg-6 d-flex social-media-links">
+                        <div class="ms-4">
+                            <a href="mailto:info@gmail.com">
+                                <span>info@gmail.com</span>
+                                <img src="imgs/icons/mail.svg" alt="mail-icon" class="img-fluid">
+                            </a>
+                        </div>
+                        <div>
+                            <a href="tel:+966023114564">
+                                <span>+966 023 11 4564</span>
+                                <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 text-start social-media-icons">
+                        <img src="imgs/icons/Instagram.svg" alt="Instagram-icon" class="img-fluid">
+                        <img src="imgs/icons/Facebook.svg" alt="Facebook-icon" class="img-fluid">
+                        <img src="imgs/icons/icons8-twitterx 1.svg" alt="twitterx-icon" class="img-fluid">
+                        <img src="imgs/icons/Linked-In.svg" alt="Linked-In-icon" class="img-fluid">
+                    </div>
+                </div>
+            </div>
             <nav class="navbar navbar-expand-lg justify-content-between d-flex" id="headerBar">
                 <button class="navbar-toggler btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,25 +51,25 @@
                 <a class="nav-link" href="#">
                     <button class="ask-request">اطلب استشارة</button>
                 </a>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav d-flex align-items-center">
+                <div class="collapse navbar-collapse d-flex justify-content-center align-items-center" id="navbarNav">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="#">الصفحة الرئسية</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#about-us">من نحن</a>
+                            <a class="nav-link" href="#">من نحن</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#our-solution">الخدمات</a>
+                            <a class="nav-link" href="#">الخدمات</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#what-we-offer">معرض الأعمال</a>
+                            <a class="nav-link" href="#">معرض الأعمال</a>
+                        </li>
+                        <li class=" nav-item">
+                            <a class="nav-link" href="#">المدونة</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#why-us">المدونة</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#testimonial">اتصل بنا</a>
+                            <a class="nav-link" href="#">اتصل بنا</a>
                         </li>
                     </ul>
                 </div>
