--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="social-media">
                 <div class="row justify-content-between">
-                    <div class="col-lg-6 d-flex social-media-links">
+                    <div class="col-md-6 col-12 justify-content-md-start justify-content-center d-flex social-media-links">
                         <div class="ms-4">
                             <a href="mailto:info@gmail.com">
                                 <span>info@gmail.com</span>
@@ -35,7 +35,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-6 text-start social-media-icons">
+                    <div class="col-md-6 text-start social-media-icons d-none d-md-block">
                         <img src="imgs/icons/Instagram.svg" alt="Instagram-icon" class="img-fluid">
                         <img src="imgs/icons/Facebook.svg" alt="Facebook-icon" class="img-fluid">
                         <img src="imgs/icons/icons8-twitterx 1.svg" alt="twitterx-icon" class="img-fluid">
@@ -43,16 +43,19 @@
                     </div>
                 </div>
             </div>
-            <nav class="navbar navbar-expand-lg justify-content-between d-flex" id="headerBar">
+            <nav class="navbar navbar-expand-lg" id="headerBar">
                 <button class="navbar-toggler btn" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="nav-link" href="#">
+                <a class="nav-link d-none d-lg-block" href="#">
                     <button class="ask-request">اطلب استشارة</button>
                 </a>
-                <div class="collapse navbar-collapse d-flex justify-content-center align-items-center" id="navbarNav">
-                    <ul class="navbar-nav">
+                <div class="collapse navbar-collapse d-lg-flex justify-content-center" id="navbarNav">
+                    <ul class="navbar-nav text-center py-4">
+                        <a class="navbar-brand d-block d-lg-none" href="#">
+                            <img src="./imgs/logo.png" alt="">
+                        </a>
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="#">الصفحة الرئسية</a>
                         </li>
@@ -71,9 +74,18 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">اتصل بنا</a>
                         </li>
+                        <a class="nav-link d-block d-lg-none" href="#">
+                            <button class="ask-request">اطلب استشارة</button>
+                        </a>
+                        <div class="text-center social-media-icons d-block d-lg-none">
+                            <img src="imgs/icons/Instagram.svg" alt="Instagram-icon" class="img-fluid">
+                            <img src="imgs/icons/Facebook.svg" alt="Facebook-icon" class="img-fluid">
+                            <img src="imgs/icons/icons8-twitterx 1.svg" alt="twitterx-icon" class="img-fluid">
+                            <img src="imgs/icons/Linked-In.svg" alt="Linked-In-icon" class="img-fluid">
+                        </div>
                     </ul>
                 </div>
-                <a class="navbar-brand fw-bold main-text" href="#">
+                <a class="navbar-brand d-none d-lg-block" href="#">
                     <img src="./imgs/logo.png" alt="">
                 </a>
             </nav>
@@ -82,6 +94,9 @@
             </div>
         </div>
     </section>
+
+
+    <script src="js/bootstrap.bundle.min.js"></script>
 
 </body>
 
