--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Tajawal:wght@400;500;700;800;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="css/grid-gallery.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -21,7 +22,8 @@
         <div class="container">
             <div class="social-media">
                 <div class="row justify-content-between">
-                    <div class="col-md-6 col-12 justify-content-md-start justify-content-center d-flex social-media-links">
+                    <div
+                        class="col-md-6 col-12 justify-content-md-start justify-content-center d-flex social-media-links">
                         <div class="ms-4">
                             <a href="mailto:info@gmail.com">
                                 <span>info@gmail.com</span>
@@ -77,7 +79,7 @@
                         <a class="nav-link d-block d-lg-none" href="#">
                             <button class="ask-request">اطلب استشارة</button>
                         </a>
-                        <div class="text-center social-media-icons d-block d-lg-none">
+                        <div class="text-center social-media-icons d-block d-md-none">
                             <img src="imgs/icons/Instagram.svg" alt="Instagram-icon" class="img-fluid">
                             <img src="imgs/icons/Facebook.svg" alt="Facebook-icon" class="img-fluid">
                             <img src="imgs/icons/icons8-twitterx 1.svg" alt="twitterx-icon" class="img-fluid">
@@ -96,6 +98,30 @@
     </section>
 
 
+    <section id="video">
+        <div class="container">
+            <div class="row mx-auto col-9">
+                <h3>تعرف على سلسلة بفيديو</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum lectus vitae justo
+                    tristique,
+                    nec malesuada elit
+                </p>
+                <div class="video-container">
+                    <a href="https://www.youtube.com/watch?v=3PkufGVNlu0" target="_blank" class="video photo">
+                        <img src="imgs/video-photo.png" class="img-fluid video-photo" />
+                        <img src="imgs/icons/play.svg" class="video-icon" alt="video icon">
+                        <img src="imgs/right-top-video.png" class="right-top-video" alt="right top video">
+                        <div class="left-bottom-layer"></div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <script src="js/grid-gallery.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
 
 </body>
