--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <section id="video">
         <div class="container">
-            <div class="row mx-auto col-9">
+            <div class="row mx-auto col-md-9">
                 <h3>تعرف على سلسلة بفيديو</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum lectus vitae justo
