--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <section id="video">
         <div class="container">
-            <div class="row mx-auto col-md-9">
+            <div class="row mx-auto col-md-8">
                 <h3>تعرف على سلسلة بفيديو</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum lectus vitae justo
@@ -114,6 +114,47 @@
                         <img src="imgs/right-top-video.png" class="right-top-video" alt="right top video">
                         <div class="left-bottom-layer"></div>
                     </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="articles">
+        <div class="container">
+            <h3>حقيبة ريادي</h3>
+            <div class="row gy-5 gap-lg-0">
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="article-block one text-center">
+                        <h4 class="title">فكرة <br> المشروع</h4>
+                        <div class="content-layer">
+                            <p>تقديم جلسة عصف ذهني لمناقشة فكرة المشروع والوصول الى أفضل فكرة تلامس حاجة السوق</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="article-block two text-center">
+                        <h4 class="title">تصميم <br> نموذج <br> العمل <br> التجاري</h4>
+                        <div class="content-layer">
+                            <p>تصميم نموذج العمل التجاري لإظهار ملامح المشروع.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="article-block three text-center">
+                        <h4 class="title">دراسة <br> جدوى</h4>
+                        <div class="content-layer">
+                            <p>إعداد ملف دراسة جدوى معتمدة (المالية – القانونية – الفنية – السوقية) للمشروع.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="article-block four text-center">
+                        <h4 class="title">دراسة <br> وتحليل</h4>
+                        <div class="content-layer">
+                            <p>دراسة وتحليل السوق تحليل المنافسين تحليل الجمهور المستهدف.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
