--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <section id="articles">
         <div class="container">
             <h3>حقيبة ريادي</h3>
-            <div class="row gy-5 gap-lg-0">
+            <div class="row gy-5 gap-lg-0 justify-content-center">
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="article-block one text-center">
                         <h4 class="title">فكرة <br> المشروع</h4>
@@ -152,6 +152,63 @@
                         <h4 class="title">دراسة <br> وتحليل</h4>
                         <div class="content-layer">
                             <p>دراسة وتحليل السوق تحليل المنافسين تحليل الجمهور المستهدف.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="article-block five text-center">
+                        <h4 class="title">تصميم <br> الهوية <br> البصرية <br> للمشروع</h4>
+                        <div class="content-layer">
+                            <p>تصميم الهوية البصرية وفلسفة الشعار واختيار اسم تجاري إبداعي وفريد أو فكرة العلامة
+                                التجارية بما يتوافق مع النشاط والصناعة</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="article-block six text-center">
+                        <h4 class="title">ملخص <br> وعرض <br> استثمار</h4>
+                        <div class="content-layer">
+                            <p>تقديم ملخص وعرض استثمار لجذب التمويل والمستثمرين.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="article-block siven text-center">
+                        <h4 class="title">الاستشارات <br> والحلول <br> القانونية</h4>
+                        <div class="content-layer">
+                            <p>تقديم الاستشارات والحلول القانونية.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="article-block eight text-center">
+                        <h4 class="title">بناء هيكلية<br> الموارد <br> البشرية</h4>
+                        <div class="content-layer">
+                            <p>بناء هيكلية الموارد البشرية والتوصيف الوظيفي.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="article-block nine text-center">
+                        <h4 class="title">الاستشارات <br> والحلول <br> التقنية.</h4>
+                        <div class="content-layer">
+                            <p>تقديم الاستشارات والحلول التقنية.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="article-block ten text-center">
+                        <h4 class="title">بناء<br> استراتيجية <br> التسويق</h4>
+                        <div class="content-layer">
+                            <p>بناء هيكلية الموارد البشرية والتوصيف الوظيفي.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="article-block eleven text-center">
+                        <h4 class="title">تحديد الأهداف ووضع  <br> خطة عمل متكاملة</h4>
+                        <div class="content-layer">
+                            <p>تحديد الأهداف ووضع خطة عمل متكاملة تتضمن الخطة التشغيلية والخطة التسويقية.</p>
                         </div>
                     </div>
                 </div>
