--- a/index.html
+++ b/index.html
@@ -206,10 +206,79 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-12">
                     <div class="article-block eleven text-center">
-                        <h4 class="title">تحديد الأهداف ووضع  <br> خطة عمل متكاملة</h4>
+                        <h4 class="title">تحديد الأهداف ووضع <br> خطة عمل متكاملة</h4>
                         <div class="content-layer">
                             <p>تحديد الأهداف ووضع خطة عمل متكاملة تتضمن الخطة التشغيلية والخطة التسويقية.</p>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section id="services">
+        <div class="container">
+            <div class="row mx-auto mb-5 col-md-9">
+                <h3>الخدمات</h3>
+                <p>بفضل خبرتنا الواسعة والمتنوعة، نقدم مجموعة متنوعة من الخدمات التي تلبي احتياجاتك بكفاءة واحترافية.
+                </p>
+            </div>
+            <div class="row gy-4">
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="service-block text-center">
+                        <img src="imgs/icons/service-1.png" class="img-fluid" alt="service-1">
+                        <h4>الاستشارات والحلول الإدارية والمالية</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum lectus vitae justo
+                            tristique, nec malesuada elit</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="service-block text-center">
+                        <img src="imgs/icons/service-2.png" class="img-fluid" alt="service-1">
+                        <h4>الاستشارات والحلول القانونية</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum lectus vitae justo
+                            tristique, nec malesuada elit</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="service-block text-center">
+                        <img src="imgs/icons/service-3.png" class="img-fluid" alt="service-1">
+                        <h4>استشارات الموارد البشرية</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum lectus vitae justo
+                            tristique, nec malesuada elit</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="service-block text-center">
+                        <img src="imgs/icons/service-4.png" class="img-fluid" alt="service-1">
+                        <h4>الاستشارات والحلول التقنية</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum lectus vitae justo
+                            tristique, nec malesuada elit</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="service-block text-center">
+                        <img src="imgs/icons/service-5.png" class="img-fluid" alt="service-1">
+                        <h4>الاستشارات والحلول التسويقية</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum lectus vitae justo
+                            tristique, nec malesuada elit</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="service-block text-center">
+                        <img src="imgs/icons/service-6.png" class="img-fluid" alt="service-1">
+                        <h4>الخدمات التسويقية</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum lectus vitae justo
+                            tristique, nec malesuada elit</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="service-block text-center">
+                        <img src="imgs/icons/service-7.png" class="img-fluid" alt="service-1">
+                        <h4>خدمات التصميم والحملات الإعلانية</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum lectus vitae justo
+                            tristique, nec malesuada elit</p>
                     </div>
                 </div>
             </div>
