--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Tajawal:wght@400;500;700;800;900&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cabin:wght@700&family=Lato&family=Tajawal:wght@400;500;700;800;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -279,6 +280,49 @@
                         <h4>خدمات التصميم والحملات الإعلانية</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum lectus vitae justo
                             tristique, nec malesuada elit</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="statistics">
+        <div class="container">
+            <div class="row gy-4">
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="statistics-block">
+                        <img src="imgs/icons/statistics-1.svg" alt="statistics-1">
+                        <div>
+                            <h3>746 +</h3>
+                            <h6>Descriptoin</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="statistics-block">
+                        <img src="imgs/icons/statistics-2.svg" alt="statistics-1">
+                        <div>
+                            <h3>98%</h3>
+                            <h6>Descriptoin</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="statistics-block">
+                        <img src="imgs/icons/statistics-3.svg" alt="statistics-1">
+                        <div>
+                            <h3>181 +</h3>
+                            <h6>Descriptoin</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="statistics-block">
+                        <img src="imgs/icons/statistics-4.svg" alt="statistics-1">
+                        <div>
+                            <h3>972 +</h3>
+                            <h6>Descriptoin</h6>
+                        </div>
                     </div>
                 </div>
             </div>
