--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Cabin:wght@700&family=Lato&family=Tajawal:wght@400;500;700;800;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
 
     <link rel="stylesheet" href="css/main.css">
@@ -398,7 +399,129 @@
     </section>
 
 
+    <section id="planning">
+        <div class="container">
+            <h3 class="mb-5">منصة سلسلة لتخطيط الأعمال</h3>
+            <div class="row align-items-center gap-5">
+                <div class="col-md-6 col-12">
+                    <figure>
+                        <img src="imgs/planning.png" class="img-fluid" alt="planning">
+                    </figure>
+                </div>
+                <div class="col-md-5 col-12">
+                    <p>كل ما تحتاجه لإنجاز وتخطيط أعمالك في منصة واحدة فقط، سارع وسجل في المنصة الآن لتحصل على كافة
+                        المميزات المتاحة داخل
+                        المنصة</p>
+                    <button>سجل الآن</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="carousel">
+        <div class="container">
+            <h3>بكل فخر عملاء سلسلة</h3>
+            <div class="swiper mySwiper2">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img src="imgs/logos/logo-1.png" class="img-fluid" alt="logo-1">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="imgs/logos/logo-2.png" class="img-fluid" alt="logo-2">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="imgs/logos/logo-3.png" class="img-fluid" alt="logo-3">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="imgs/logos/logo-4.png" class="img-fluid" alt="logo-4">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="imgs/logos/logo-5.png" class="img-fluid" alt="logo-5">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="imgs/logos/logo-1.png" class="img-fluid" alt="logo-1">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="imgs/logos/logo-2.png" class="img-fluid" alt="logo-2">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="imgs/logos/logo-3.png" class="img-fluid" alt="logo-3">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="imgs/logos/logo-4.png" class="img-fluid" alt="logo-4">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="imgs/logos/logo-5.png" class="img-fluid" alt="logo-5">
+                    </div>
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+            </div>
+        </div>
+    </section>
+
+    <section id="other-testimonial">
+        <div class="container">
+            <h3>آراء عملائنا</h3>
+            <div class="testimonial mySwiper3">
+                <div class="testi-content swiper-wrapper">
+                    <div class="slide swiper-slide">
+                        <p class="desc">
+                            This proved to be impossible using the traditional concepts of space and time. Einstein
+                            developed a new view of time
+                            first and then space. This proved to be impossible using the traditional concepts of space
+                            and time. Einstein developed
+                            a new view of time first and then space.
+                        </p>
+                        <img src="imgs/cover.svg" alt="" class="image" />
+                        <i class="bx bxs-quote-alt-left quote-icon"></i>
+                        <div class="details">
+                            <span class="name">خالد</span>
+                            <span class="job">محاسب لدى شركة Unknow</span>
+                        </div>
+                    </div>
+                    <div class="slide swiper-slide">
+                        <p class="desc">
+                            This proved to be impossible using the traditional concepts of space and time. Einstein
+                            developed a new view of time
+                            first and then space. This proved to be impossible using the traditional concepts of space
+                            and time. Einstein developed
+                            a new view of time first and then space.
+                        </p>
+                        <img src="imgs/cover.svg" alt="" class="image" />
+                        <i class="bx bxs-quote-alt-left quote-icon"></i>
+                        <div class="details">
+                            <span class="name">خالد</span>
+                            <span class="job">محاسب لدى شركة Unknow</span>
+                        </div>
+                    </div>
+                    <div class="slide swiper-slide">
+                        <p class="desc">
+                            This proved to be impossible using the traditional concepts of space and time. Einstein
+                            developed a new view of time
+                            first and then space. This proved to be impossible using the traditional concepts of space
+                            and time. Einstein developed
+                            a new view of time first and then space.
+                        </p>
+                        <img src="imgs/cover.svg" alt="" class="image" />
+                        <i class="bx bxs-quote-alt-left quote-icon"></i>
+                        <div class="details">
+                            <span class="name">خالد</span>
+                            <span class="job">محاسب لدى شركة Unknow</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-button-next nav-btn"></div>
+                <div class="swiper-button-prev nav-btn"></div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
+    </section>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script>
@@ -415,15 +538,32 @@
                     slidesPerView: 1
                 },
                 480: {
-                    slidesPerView: 1
-                },
-                768: {
                     slidesPerView: 2
                 },
-                991: {
+                768: {
                     slidesPerView: 3
                 }
             }
+        });
+
+
+        var swiper = new Swiper(".mySwiper2", {
+            watchSlidesProgress: true,
+            slidesPerView: 5,
+        });
+
+        var swiper = new Swiper(".mySwiper3", {
+            slidesPerView: 1,
+            grabCursor: true,
+            loop: true,
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
         });
     </script>
 </body>
