--- a/index.html
+++ b/index.html
@@ -417,7 +417,64 @@
             </div>
         </div>
     </section>
-
+    <section id="portfolio">
+        <div class="container">
+            <h3>تعرف على معرض أعمال سلسلة</h3>
+            <div class="row gap-0">
+                <div class="col-lg-4 col-md-6 col-12 ">
+                    <figure>
+                        <img src="imgs/portfolio/portfolio-1.png" alt="portfolio-1" class="img-fluid">
+                        <div class="content-layer">
+                            <h5 class="title">شركة الغامدي للمقاولات</h5>
+                            <p>تم استلام الفكرة من العميل والمساعدة على دراسة الجدوى الاقتصادية والمساعدة بكافة الحلول
+                                التقنية والتسويقية والمتابعة
+                                الدورية.</p>
+                        </div>
+                    </figure>
+                    <figure>
+                        <img src="imgs/portfolio/portfolio-2.png" alt="portfolio-2" class="img-fluid">
+                        <div class="content-layer">
+                            <h5 class="title">شركة الغامدي للمقاولات</h5>
+                            <p>تم استلام الفكرة من العميل والمساعدة على دراسة الجدوى الاقتصادية والمساعدة بكافة الحلول
+                                التقنية والتسويقية والمتابعة
+                                الدورية.</p>
+                        </div>
+                    </figure>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <figure>
+                        <img src="imgs/portfolio/portfolio-3.png" alt="portfolio-3" class="img-fluid">
+                        <div class="content-layer">
+                            <h5 class="title">شركة الغامدي للمقاولات</h5>
+                            <p>تم استلام الفكرة من العميل والمساعدة على دراسة الجدوى الاقتصادية والمساعدة بكافة الحلول
+                                التقنية والتسويقية والمتابعة
+                                الدورية.</p>
+                        </div>
+                    </figure>
+                    <figure>
+                        <img src="imgs/portfolio/portfolio-4.png" alt="portfolio-4" class="img-fluid">
+                        <div class="content-layer">
+                            <h5 class="title">شركة الغامدي للمقاولات</h5>
+                            <p>تم استلام الفكرة من العميل والمساعدة على دراسة الجدوى الاقتصادية والمساعدة بكافة الحلول
+                                التقنية والتسويقية والمتابعة
+                                الدورية.</p>
+                        </div>
+                    </figure>
+                </div>
+                <div class="col-lg-4 col-12">
+                    <figure>
+                        <img src="imgs/portfolio/portfolio-5.png" alt="portfolio-5" class="img-fluid">
+                        <div class="content-layer">
+                            <h5 class="title">شركة الغامدي للمقاولات</h5>
+                            <p>تم استلام الفكرة من العميل والمساعدة على دراسة الجدوى الاقتصادية والمساعدة بكافة الحلول
+                                التقنية والتسويقية والمتابعة
+                                الدورية.</p>
+                        </div>
+                    </figure>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="carousel">
         <div class="container">
             <h3>بكل فخر عملاء سلسلة</h3>
