--- a/index.html
+++ b/index.html
@@ -573,6 +573,111 @@
         </div>
     </section>
 
+    <section id="last-blog">
+        <div class="container">
+            <h3>آخر المقالات</h3>
+            <div class="row align-items-center justify-content-center gy-4">
+                <div class="col-lg-6 col-12">
+                    <div class="last-blog-block">
+                        <h4>انـضـم لـنـشـرتـنـا الـبـريـديـة</h4>
+                        <p>مقالات غنية بالمعلومات المفيدة</p>
+                        <div class="d-flex flex-wrap">
+                            <input type="email" placeholder="البريد الالكتروني">
+                            <button>سجل الآن</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-12">
+                    <div class="top position-relative">
+                        <div>
+                            <button>تحليل</button>
+                            <button>تسويق</button>
+                        </div>
+                    </div>
+                    <div class="bottom">
+                        <h5>دراسة الجدوى الاقتصادية</h5>
+                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
+                            سيزود لاحقاً، هذا النص هو نص
+                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
+                        <a href="#">اقرأ المزيد</a>
+                    </div>
+                </div>
+            </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="row justify-content-between gy-4">
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="footer-block">
+                        <img src="imgs/logo.png" alt="logo" class="img-fluid logo">
+                        <p>شركة سلسلة هي أول شركة سعودية من نوعها في السوق السعودي</p>
+                        <div class="media">
+                            <img src="imgs/icons/Linked-In.svg" alt="Linked-In">
+                            <img src="imgs/icons/icons8-twitterx 1.svg" alt="twitterx">
+                            <img src="imgs/icons/Facebook.svg" alt="Facebook">
+                            <img src="imgs/icons/Instagram.svg" alt="Instagram">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-md-6 col-12">
+                    <div class="footer-block">
+                        <h4>عن سلسلة</h4>
+                        <ul>
+                            <li><a href="">الصفحة الرئيسية</a></li>
+                            <li><a href="">من نحن</a></li>
+                            <li><a href="">المدونة</a></li>
+                            <li><a href="">اتصل بنا</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="footer-block">
+                        <h4>خدماتنا</h4>
+                        <div class="d-md-flex gap-3">
+                            <ul>
+                                <li><a href="">الاستشارات والحلول الإدارية والمالية</a></li>
+                                <li><a href="">الاستشارات والحلول القانونية</a></li>
+                                <li><a href="">استشارات الموارد البشرية</a></li>
+                                <li><a href="">الاستشارات والحلول التقنية</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="">الاستشارات والحلول التسويقية</a></li>
+                                <li><a href="">الخدمات التسويقية</a></li>
+                                <li><a href="">خدمات التصميم والحملات الإعلانية</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-12">
+                    <div class="footer-block last-block">
+                        <h4>تواصل معنا</h4>
+                        <ul class="d-flex flex-column gy-5">
+                            <li>
+                                <a href="mailto:info@gmail.com">
+                                    <img src="imgs/icons/mail.svg" alt="mail-icon" class="img-fluid icon">
+                                    <span>info@gmail.com</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="tel:+966023114564">
+                                    <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid icon">
+                                    <span>+966 023 11 4564</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="imgs/icons/location.svg" alt="phone-icon" class="img-fluid icon">
+                                    <span>الرياض - شارع الملك فهد 112</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
