--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">معرض الأعمال</a>
+                            <a class="nav-link" href="gallery.html">معرض الأعمال</a>
                         </li>
                         <li class=" nav-item">
                             <a class="nav-link" href="#">المدونة</a>
@@ -687,6 +687,10 @@
             </div>
         </div>
     </footer>
+
+    <div class="copyRight">
+        <p>جميع الحقوق محفوظة لشركة سلسلة 2023</p>
+    </div>
 
 
 
