--- a/who-we-ara.html
+++ b/who-we-ara.html
@@ -75,7 +75,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">معرض الأعمال</a>
+                            <a class="nav-link" href="gallery.html">معرض الأعمال</a>
                         </li>
                         <li class=" nav-item">
                             <a class="nav-link" href="#">المدونة</a>
@@ -377,6 +377,9 @@
             </div>
         </div>
     </footer>
+    <div class="copyRight">
+        <p>جميع الحقوق محفوظة لشركة سلسلة 2023</p>
+    </div>
 
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
